// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Spinner > should render 1`] = `
<div>
  <div
    class="css-1b3vlxq"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a danger color 1`] = `
<div>
  <div
    class="css-9damuw"
    color="danger"
  />
</div>
`;

exports[`Spinner > should render a hint color 1`] = `
<div>
  <div
    class="css-7me5qc"
    color="hint"
  />
</div>
`;

exports[`Spinner > should render a info color 1`] = `
<div>
  <div
    class="css-1b3vlxq"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a large one 1`] = `
<div>
  <div
    class="css-1y6vpeg"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a small one 1`] = `
<div>
  <div
    class="css-1knqax5"
    color="info"
  />
</div>
`;

exports[`Spinner > should render a success color 1`] = `
<div>
  <div
    class="css-1c1wt4l"
    color="success"
  />
</div>
`;

exports[`Spinner > should render a warning color 1`] = `
<div>
  <div
    class="css-1g21ldy"
    color="warning"
  />
</div>
`;
